# p3-keccak-machine

./: .gitignore  Cargo.toml
src/: bus.rs  lib.rs  machine.rs  test_util.rs  trace.rs
src/airs/: mod.rs
src/airs/keccak/: air.rs  columns.rs  constants.rs  generation.rs  mod.rs  round_flags.rs
src/airs/poseidon/: air.rs  columns.rs  generation.rs  mod.rs  round_flags.rs
src/airs/step_flags/: air.rs  columns.rs
src/chips/: mod.rs
src/chips/keccak_permute/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/keccak_sponge/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/memory/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/merkle_root/: columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/merkle_tree/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/range_checker/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
src/chips/xor/: air.rs  columns.rs  interaction.rs  mod.rs  trace.rs
