[package]
name = "p3-keccak-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }

p3-air-util = { git = "https://github.com/shuklaayush/p3-utils.git" }
p3-derive = { git = "https://github.com/shuklaayush/p3-utils.git" }
p3-interaction = { git = "https://github.com/shuklaayush/p3-utils.git" }
p3-machine = { git = "https://github.com/shuklaayush/p3-utils.git" }

itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tiny-keccak = "2.0.2"

[features]
default = []
trace-writer = [
    "p3-air-util/trace-writer",
    "p3-derive/trace-writer",
    "p3-machine/trace-writer",
]

# [patch."https://github.com/shuklaayush/p3-utils.git"]
# p3-air-util = { path = "../p3-utils/air-util" }
# p3-derive = { path = "../p3-utils/derive" }
# p3-interaction = { path = "../p3-utils/interaction" }
# p3-machine = { path = "../p3-utils/machine" }
